--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
-            "Todo\\": "src/"
+            "Todos\\": "src/classes"
         }
     },
     "config": {
